--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
             <div class="pagination">3</div>
             <div class="pagination">4</div>
         </div>
-        <buttton class="btn" id="prev">Previous</buttton>
-        <buttton class="btn" id="next">next</buttton>
+        <br><br>
+        <button type="button" class="btn" id="prev" disabled>Previous</button>
+        <button type= "button" class="btn" id="next">Next</button>
+
     </div>
 
 
